syntax = "proto3";

package calculator;
option go_package="calculator/calpb";


message calRequest{
    int32 first_num = 1;
    int32 second_num = 2;
}

message calResponse {
    int32 result = 1;
}


service CalService{
    //Unary
    rpc Calculation(calRequest) returns (calResponse) {};
}